--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -231,9 +231,12 @@
       </mat-paginator>
     </div>
   </div>
-
-
 </div>
+
+<button class="fixed-button" >
+  <mat-icon>chat</mat-icon> Chat
+</button>
+
 
 
 
