--- a/src/app/layout/login/login.component.html
+++ b/src/app/layout/login/login.component.html
@@ -1,22 +1,30 @@
 <div class="login-container">
     <img src="logo.png" alt="Login Image" class="login-image">
-    <h3 class="login-title">Effortlessly Bringing Plans to Life, <br>
-        one step away</h3>
-    <form class="login-form">
-        <mat-form-field appearance="fill">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Email" name="email" type="text" formControlName="email" />
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-            <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" name="Password" type="password" formControlName="password" />
-        </mat-form-field>
-        
-        <button mat-raised-button class="login-button" id="login_btn">LOGIN</button>
+    <h3 class="login-title">Effortlessly Bringing Plans to Life, <br> one step away</h3>
+    
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
+      <!-- Email Field -->
+      <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Email" formControlName="email" />
+        <mat-error *ngIf="email?.hasError('required')">Email is required</mat-error>
+        <mat-error *ngIf="email?.hasError('email')">Invalid email format</mat-error>
+      </mat-form-field>
+  
+      <!-- Password Field -->
+      <mat-form-field appearance="fill">
+        <mat-label>Password</mat-label>
+        <input matInput placeholder="Password" type="password" formControlName="password" />
+        <mat-error *ngIf="password?.hasError('required')">Password is required</mat-error>
+        <mat-error *ngIf="password?.hasError('minlength')">Password must be at least 8 characters</mat-error>
+        <mat-error *ngIf="password?.hasError('pattern')">Password must contain at least one uppercase letter and one number</mat-error>
+      </mat-form-field>
+  
+      <!-- Submit Button -->
+      <button mat-raised-button class="login-button" id="login_btn" [disabled]="loginForm.invalid">LOGIN</button>
     </form>
-    <p class="regular-text">You dont have an account? <a [routerLink]="'/register'">MAKE ONE FOR FREE</a>.</p>
+  
+    <p class="regular-text">You don't have an account? <a [routerLink]="'/register'">MAKE ONE FOR FREE</a>.</p>
     <a class="regular-text" [routerLink]="'/home'">Continue without an account</a>
-
-</div>
+  </div>
   
