--- a/src/app/event/event-card/event-card.component.css
+++ b/src/app/event/event-card/event-card.component.css
@@ -2,6 +2,7 @@ mat-card{
     height: 18em;
     width: 16em;
     position: relative;
+    /* transition: transform 0.3s ease, box-shadow 0.3s ease !important; */
 }
 
 img{
