--- a/src/app/services/pupservice-management/pupservice-management.component.html
+++ b/src/app/services/pupservice-management/pupservice-management.component.html
@@ -26,7 +26,7 @@
     </button>
   </div>
 
-  <div *ngIf="showFilterPanel" class="filter-panel">
+  <div *ngIf="showFilterPanel"  @slideInOut  class="filter-panel">
     <form [formGroup]="filterForm" class="filter-form">
       <mat-form-field appearance="fill" class="filter-field">
         <mat-label>Category</mat-label>
