--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -5,15 +5,15 @@
         </a>
     </div>
     <div class="navbar-right">
-    <button mat-icon-button class="profile-button small-button" [routerLink]="'/profile'" aria-label="Profile" *ngIf="!isLoginRoute && !isRegisterRoute">
+    <button mat-icon-button class="profile-button small-button" [routerLink]="'/profile'" aria-label="Profile" *ngIf="loggedIn">
         <mat-icon>account_circle</mat-icon>
         </button>
-      <button mat-icon-button class="notification-button small-button" aria-label="Notifications"  *ngIf="!isLoginRoute && !isRegisterRoute">
+      <button mat-icon-button class="notification-button small-button" aria-label="Notifications"  *ngIf="loggedIn">
         <mat-icon>notifications</mat-icon>
       </button>
-      <button mat-raised-button class="nav-button" id="logout_nav_btn" [routerLink]="'/login'" *ngIf="!isLoginRoute && !isRegisterRoute">LOG OUT</button>
-      <button mat-raised-button class="nav-button" id="login_nav_btn" [routerLink]="'/login'" *ngIf="!isLoginRoute">LOG IN</button>
-      <button mat-raised-button class="nav-button" id="register_nav_btn" [routerLink]="'/register'" *ngIf="!isRegisterRoute">REGISTER</button>
+      <button mat-raised-button class="nav-button" id="logout_nav_btn" [routerLink]="'/login'" *ngIf="loggedIn">LOG OUT</button>
+      <button mat-raised-button class="nav-button" id="login_nav_btn" [routerLink]="'/login'" *ngIf="!isLoginRoute && !loggedIn">LOG IN</button>
+      <button mat-raised-button class="nav-button" id="register_nav_btn" [routerLink]="'/register'" *ngIf="!isRegisterRoute && !loggedIn">REGISTER</button>
 
     </div>
 </nav>
