--- a/src/colors.css
+++ b/src/colors.css
@@ -7,6 +7,6 @@
     --font-dark-blue: #073B4C;
     --yellow-accent: #FFD166;
     --error-color: #B21114;
-    --error-color-lighter: #EF476F;
+    --error-color-lighter: #FF7092;
     --green-color: #7E9B08;
   }
