[WIP] - Add basic routing for registration

--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -3,7 +3,7 @@
     <h3 class="register-title">I wish to be a...</h3>
     
       <!-- Submit Button -->
-      <button mat-raised-button class="register-button" id="pup_btn" [routerLink]="'/register-organizer'">PRODUCT/SERVICE PROVIDER</button>
+      <button mat-raised-button class="register-button" id="pup_btn" [routerLink]="'/register-pup'">PRODUCT/SERVICE PROVIDER</button>
       <button mat-raised-button class="register-button" id="organizer_btn" [routerLink]="'/register-organizer'">ORGANIZER</button>
 
     <p class="regular-text">Already have an account? <a [routerLink]="'/login'">LOGIN</a>.</p>
