[ADD] - Add organizer registration

--- a/src/app/authentication/email-confirmation-sent/email-confirmation-sent.component.html
+++ b/src/app/authentication/email-confirmation-sent/email-confirmation-sent.component.html
@@ -7,6 +7,6 @@
         Once you’ve received the email, click on the link, log in and enjoy the great benefits of your new account!
     
     </p>
-      <button mat-raised-button class="back-to-homepage-button" [routerLink]="'/home'">BACK TO HOMEPAGE</button>
+      <button mat-raised-button class="back-to-homepage-button" [routerLink]="'/login'">BACK TO LOGIN</button>
   </div>
   
