--- a/src/app/authentication/register/organizer-register/organizer-register.component.css
+++ b/src/app/authentication/register/organizer-register/organizer-register.component.css
@@ -7,7 +7,7 @@
 
 mat-error {
   color: var(--error-color-lighter) !important;
-  font-size: 14px;  
+  font-size: 12px;  
   display: block;
 }
 
@@ -52,23 +52,65 @@ mat-form-field {
  
 }
 
-.register-button {
-  width: 50%;
+.register-container {
+  text-align: center;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.register-image {
+  max-width: 100px;
+  height: auto;
+}
+
+.register-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.button-group {
+  display: flex;
+  justify-content: space-between; /* This will place the buttons at opposite ends */
+  margin-top: 1em;
+  width: 100%; /* Make sure the button container spans the full width */
+}
+
+.back-button, .register-button {
+  width: 30%; /* Set width to less than 50% to allow space between the buttons */
   padding: 0.8em;
+  font-weight: normal;
   background-color: var(--secondary-color) !important;
   color: white !important;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
-  margin-top: 1em;
 }
 
-.register-button:hover {
+.back-button{
+  background-color: var(--primary-color) !important;
+}
+
+.back-button:hover, .register-button:hover {
   background-color: var(--font-dark-blue);
   color: white;
 }
 
+
+
+.password-hint {
+  font-size: 12px;
+  color: var(--font-light);
+  margin-top: 5px;
+}
+
+
 .upload-button {
-  margin-top: 1em;
+  width: 100%;
+  font-weight: normal;
+  background-color: var(--secondary-color) !important;
+  color: white;
 }
 
 .profile-pic {
