--- a/src/app/authentication/register/organizer-register/organizer-register.component.css
+++ b/src/app/authentication/register/organizer-register/organizer-register.component.css
@@ -5,6 +5,11 @@
   padding: 2em;
 }
 
+label{
+  font-size: 12px;
+  color: var(--font-light);
+}
+
 mat-error {
   color: var(--error-color-lighter) !important;
   font-size: 12px;  
@@ -25,9 +30,11 @@ mat-error {
 
 .register-title {
   color: var(--beige);
+  margin:0;
 }
 
 .register-form {
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -108,6 +115,7 @@ mat-form-field {
 
 .upload-button {
   width: 100%;
+  margin-top: 5px;
   font-weight: normal;
   background-color: var(--secondary-color) !important;
   color: white;
