--- a/src/app/authentication/register/organizer-register/organizer-register.component.html
+++ b/src/app/authentication/register/organizer-register/organizer-register.component.html
@@ -1,6 +1,7 @@
 <div class="register-container">
   <img src="logo.png" alt="Logo Image" class="register-image">
   <h3 class="register-title">Organizer</h3>
+  <label>Please provide us with some information about yourself.</label>
   
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register-form">
     <div class="form-grid">
@@ -75,9 +76,19 @@
           <input matInput placeholder="City" formControlName="city" />
           <mat-error *ngIf="registerForm.get('city')?.hasError('required')">City is required</mat-error>
         </mat-form-field>
+
+
+        <div class="profile-pic">
+          <input type="file" id="profilePic" (change)="onFileSelected($event)" style="display: none;" />
+          <button mat-raised-button class="upload-button" (click)="triggerFileInput()">UPLOAD PROFILE PICTURE (OPTIONAL)</button>
+        </div>
       </div>
     </div>
 
+
+    <div *ngIf="imagePreview" class="image-preview">
+      <img [src]="imagePreview" alt="Profile Picture Preview" />
+    </div>
     <div class="button-group">
       <button mat-raised-button class="back-button" routerLink="/register">BACK</button>
       <button mat-raised-button 
