--- a/src/app/authentication/register/pup-register/pup-register.component.html
+++ b/src/app/authentication/register/pup-register/pup-register.component.html
@@ -1,1 +1,78 @@
-<p>pup-register works!</p>
+<div class="register-container">
+    <img src="logo.png" alt="Logo Image" class="register-image">
+    <h3 class="register-title">Product/Service provider</h3>
+    <label>Please provide us with some information about yourself.</label>
+    
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register-form">
+      <div class="form-grid">
+        <!-- First Column of Inputs -->
+        <div class="form-column">
+          <mat-form-field appearance="fill">
+            <mat-label>Full Name</mat-label>
+            <input matInput placeholder="Full Name" formControlName="fullName" />
+            <mat-error *ngIf="registerForm.get('fullName')?.hasError('required')">Full Name is required</mat-error>
+          </mat-form-field>
+      
+          <mat-form-field appearance="fill">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="Email" formControlName="email" />
+            <mat-error *ngIf="registerForm.get('email')?.hasError('required')">Email is required</mat-error>
+            <mat-error *ngIf="registerForm.get('email')?.hasError('email')">Invalid email format</mat-error>
+          </mat-form-field>
+      
+
+          <mat-form-field appearance="fill">
+            <mat-label>Phone Number</mat-label>
+            <input matInput placeholder="Phone Number" formControlName="phoneNumber" type="number" />
+            <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('minlength')">
+              Phone number must be at least 8 characters
+            </mat-error>
+            <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('pattern')">
+              Phone number must contain only numbers
+            </mat-error>
+            <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('required')">
+              Phone number is required
+            </mat-error>
+          </mat-form-field>
+          
+        </div>
+      
+        <!-- Second Column of Inputs -->
+        <div class="form-column">
+          <mat-form-field appearance="fill">
+            <mat-label>Address</mat-label>
+            <input matInput placeholder="Address" formControlName="address" />
+            <mat-error *ngIf="registerForm.get('address')?.hasError('required')">Address is required</mat-error>
+          </mat-form-field>
+  
+          <mat-form-field appearance="fill">
+            <mat-label>City</mat-label>
+            <input matInput placeholder="City" formControlName="city" />
+            <mat-error *ngIf="registerForm.get('city')?.hasError('required')">City is required</mat-error>
+          </mat-form-field>
+
+          <div class="profile-pic">
+            <input type="file" id="profilePic" (change)="onFileSelected($event)" style="display: none;" />
+            <button mat-raised-button class="upload-button" (click)="triggerFileInput()">UPLOAD PROFILE PICTURE (OPTIONAL)</button>
+          </div>
+
+        </div>
+      </div>
+  
+
+
+      <div class="button-group">
+        <div *ngIf="imagePreview" class="image-preview">
+          <img [src]="imagePreview" alt="Profile Picture Preview" />
+        </div>
+
+
+        <button mat-raised-button class="back-button" routerLink="/register">BACK</button>
+        <button mat-raised-button 
+                class="next-button"
+                (click)="onSubmit()">NEXT</button>
+      </div>
+      
+    </form>
+  </div>
+  
