--- a/src/app/authentication/register/pup-register/pup-register.component.css
+++ b/src/app/authentication/register/pup-register/pup-register.component.css
@@ -1,10 +1,12 @@
 :host {
     display: block;
     background-color: var(--primary-color);
-    min-height: 100vh;
+    min-height: 90vh;
     padding: 2em;
   }
   
+
+
   label{
     font-size: 12px;
     color: var(--font-light);
@@ -96,6 +98,7 @@
   
   .upload-button {
     width: 100%;
+    margin-top: 5px;
     font-weight: normal;
     background-color: var(--secondary-color) !important;
     color: white;
