--- a/src/app/authentication/register/pup-register/pup-register.component.html
+++ b/src/app/authentication/register/pup-register/pup-register.component.html
@@ -3,12 +3,12 @@
   <label>Please provide us with some information about yourself.</label>
 
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register-form">
-    <!-- Step 1 -->
+    <!-- Step 1: Personal Data -->
     <div *ngIf="currentStep === 0">
       <mat-form-field appearance="fill">
         <mat-label>Full Name</mat-label>
         <input matInput placeholder="Full Name" formControlName="fullName" />
-        <mat-error *ngIf="step1Controls['fullName']?.hasError('required')">
+        <mat-error *ngIf="registerForm.get('fullName')?.hasError('required')">
           Full Name is required
         </mat-error>
       </mat-form-field>
@@ -16,10 +16,10 @@
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
         <input matInput placeholder="Email" formControlName="email" />
-        <mat-error *ngIf="step1Controls['email']?.hasError('required')">
+        <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
           Email is required
         </mat-error>
-        <mat-error *ngIf="step1Controls['email']?.hasError('email')">
+        <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
           Invalid email format
         </mat-error>
       </mat-form-field>
@@ -27,66 +27,129 @@
       <mat-form-field appearance="fill">
         <mat-label>Phone Number</mat-label>
         <input matInput placeholder="Phone Number" formControlName="phoneNumber" />
-        <mat-error *ngIf="step1Controls['phoneNumber']?.hasError('pattern')">
+        <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('pattern')">
           Phone number must be at least 8 digits
         </mat-error>
-        <mat-error *ngIf="step1Controls['phoneNumber']?.hasError('required')">
+        <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('required')">
           Phone number is required
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>City</mat-label>
+        <input matInput placeholder="City" formControlName="city" />
+        <mat-error *ngIf="registerForm.get('city')?.hasError('required')">
+          City is required
         </mat-error>
       </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Address</mat-label>
         <input matInput placeholder="Address" formControlName="address" />
-        <mat-error *ngIf="step1Controls['address']?.hasError('required')">
+        <mat-error *ngIf="registerForm.get('address')?.hasError('required')">
           Address is required
         </mat-error>
       </mat-form-field>
+
+      <div class="profile-pic">
+        <button mat-raised-button type="button" (click)="uploadImage()">
+          Upload Profile Picture
+        </button>
+        <div *ngIf="imagePreview" class="image-preview">
+          <img [src]="imagePreview" alt="Profile Preview" />
+        </div>
+      </div>
     </div>
 
-    <!-- Step 2 -->
+    <!-- Step 2: Company Data -->
     <div *ngIf="currentStep === 1">
       <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Company Email" formControlName="companyEmail" />
+        <mat-error *ngIf="registerForm.get('companyEmail')?.hasError('required')">
+          Email is required
+        </mat-error>
+        <mat-error *ngIf="registerForm.get('companyEmail')?.hasError('email')">
+          Invalid email format
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Password</mat-label>
+        <input
+          matInput
+          [type]="hidePassword ? 'password' : 'text'"
+          placeholder="Password"
+          formControlName="password"
+        />
+        <button mat-icon-button type="button" (click)="togglePasswordVisibility()" matSuffix>
+          <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+        </button>
+        <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
+          Password is required
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Confirm Password</mat-label>
+        <input
+          matInput
+          [type]="hideConfirmPassword ? 'password' : 'text'"
+          placeholder="Confirm Password"
+          formControlName="confirmPassword"
+        />
+        <button mat-icon-button type="button" (click)="toggleConfirmPasswordVisibility()" matSuffix>
+          <mat-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+        </button>
+        <mat-error *ngIf="registerForm.get('confirmPassword')?.hasError('passwordMismatch')">
+          Passwords do not match
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Company Name</mat-label>
+        <input matInput placeholder="Company Name" formControlName="companyName" />
+        <mat-error *ngIf="registerForm.get('companyName')?.hasError('required')">
+          Company Name is required
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Phone Number</mat-label>
+        <input matInput placeholder="Phone Number" formControlName="companyPhoneNumber" />
+        <mat-error *ngIf="registerForm.get('companyPhoneNumber')?.hasError('required')">
+          Phone Number is required
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
         <mat-label>City</mat-label>
-        <input matInput placeholder="City" formControlName="city" />
-        <mat-error *ngIf="step2Controls['city']?.hasError('required')">
+        <input matInput placeholder="City" formControlName="companyCity" />
+        <mat-error *ngIf="registerForm.get('companyCity')?.hasError('required')">
           City is required
         </mat-error>
       </mat-form-field>
 
       <mat-form-field appearance="fill">
-        <mat-label>Business Name</mat-label>
-        <input matInput placeholder="Business Name" formControlName="businessName" />
-        <mat-error *ngIf="step2Controls['businessName']?.hasError('required')">
-          Business Name is required
+        <mat-label>Address</mat-label>
+        <input matInput placeholder="Company Address" formControlName="companyAddress" />
+        <mat-error *ngIf="registerForm.get('companyAddress')?.hasError('required')">
+          Address is required
         </mat-error>
       </mat-form-field>
 
       <mat-form-field appearance="fill">
-        <mat-label>Business Category</mat-label>
-        <input matInput placeholder="Business Category" formControlName="businessCategory" />
-        <mat-error *ngIf="step2Controls['businessCategory']?.hasError('required')">
-          Business Category is required
+        <mat-label>Description</mat-label>
+        <textarea matInput placeholder="Description" formControlName="description"></textarea>
+        <mat-error *ngIf="registerForm.get('description')?.hasError('required')">
+          Description is required
         </mat-error>
       </mat-form-field>
-
-      <mat-checkbox formControlName="terms">
-        I agree to the terms and conditions
-      </mat-checkbox>
-      <mat-error *ngIf="step2Controls['terms']?.hasError('requiredTrue')">
-        You must agree to the terms and conditions
-      </mat-error>
     </div>
 
     <!-- Navigation Buttons -->
     <div class="button-group">
-      <button
-        mat-raised-button
-        class="back-button"
-        *ngIf="currentStep > 0"
-        type="button"
-        (click)="onBack()"
-      >
+      <button mat-raised-button class="back-button" *ngIf="currentStep > 0" type="button" (click)="onBack()">
         BACK
       </button>
       <button
@@ -98,12 +161,7 @@
       >
         NEXT
       </button>
-      <button
-        mat-raised-button
-        class="register-button"
-        *ngIf="currentStep === 1"
-        type="submit"
-      >
+      <button mat-raised-button class="register-button" *ngIf="currentStep === 1" type="submit">
         REGISTER
       </button>
     </div>
