--- a/src/app/authentication/register/pup-register/pup-register.component.html
+++ b/src/app/authentication/register/pup-register/pup-register.component.html
@@ -5,146 +5,162 @@
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register-form">
     <!-- Step 1: Personal Data -->
     <div *ngIf="currentStep === 0">
-      <mat-form-field appearance="fill">
-        <mat-label>Full Name</mat-label>
-        <input matInput placeholder="Full Name" formControlName="fullName" />
-        <mat-error *ngIf="registerForm.get('fullName')?.hasError('required')">
-          Full Name is required
-        </mat-error>
-      </mat-form-field>
+      <div class="form-grid">
+        <!-- First Column of Inputs -->
+        <div class="form-column">
+          <mat-form-field appearance="fill">
+            <mat-label>Full Name</mat-label>
+            <input matInput placeholder="Full Name" formControlName="fullName" />
+            <mat-error *ngIf="registerForm.get('fullName')?.hasError('required')">
+              Full Name is required
+            </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" formControlName="email" />
-        <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
-          Email is required
-        </mat-error>
-        <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
-          Invalid email format
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="Email" formControlName="email" />
+            <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
+              Email is required
+            </mat-error>
+            <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
+              Invalid email format
+            </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Phone Number</mat-label>
-        <input matInput placeholder="Phone Number" formControlName="phoneNumber" />
-        <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('pattern')">
-          Phone number must be at least 8 digits
-        </mat-error>
-        <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('required')">
-          Phone number is required
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Phone Number</mat-label>
+            <input matInput placeholder="Phone Number" formControlName="phoneNumber" />
+            <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('pattern')">
+              Phone number must be at least 8 digits
+            </mat-error>
+            <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('required')">
+              Phone number is required
+            </mat-error>
+          </mat-form-field>
+        </div>
 
-      <mat-form-field appearance="fill">
-        <mat-label>City</mat-label>
-        <input matInput placeholder="City" formControlName="city" />
-        <mat-error *ngIf="registerForm.get('city')?.hasError('required')">
-          City is required
-        </mat-error>
-      </mat-form-field>
+        <!-- Second Column of Inputs -->
+        <div class="form-column">
+          <mat-form-field appearance="fill">
+            <mat-label>City</mat-label>
+            <input matInput placeholder="City" formControlName="city" />
+            <mat-error *ngIf="registerForm.get('city')?.hasError('required')">
+              City is required
+            </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Address</mat-label>
-        <input matInput placeholder="Address" formControlName="address" />
-        <mat-error *ngIf="registerForm.get('address')?.hasError('required')">
-          Address is required
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Address</mat-label>
+            <input matInput placeholder="Address" formControlName="address" />
+            <mat-error *ngIf="registerForm.get('address')?.hasError('required')">
+              Address is required
+            </mat-error>
+          </mat-form-field>
 
-      <div class="profile-pic">
-        <button mat-raised-button type="button" (click)="uploadImage()">
-          Upload Profile Picture
-        </button>
-        <div *ngIf="imagePreview" class="image-preview">
-          <img [src]="imagePreview" alt="Profile Preview" />
+          <div class="profile-pic">
+            <button mat-raised-button type="button" (click)="uploadImage()">
+              Upload Profile Picture
+            </button>
+            <div *ngIf="imagePreview" class="image-preview">
+              <img [src]="imagePreview" alt="Profile Preview" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Step 2: Company Data -->
     <div *ngIf="currentStep === 1">
-      <mat-form-field appearance="fill">
-        <mat-label>Email</mat-label>
-        <input matInput placeholder="Company Email" formControlName="companyEmail" />
-        <mat-error *ngIf="registerForm.get('companyEmail')?.hasError('required')">
-          Email is required
-        </mat-error>
-        <mat-error *ngIf="registerForm.get('companyEmail')?.hasError('email')">
-          Invalid email format
-        </mat-error>
-      </mat-form-field>
+      <div class="form-grid">
+        <!-- First Column of Inputs -->
+        <div class="form-column">
+          <mat-form-field appearance="fill">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="Company Email" formControlName="companyEmail" />
+            <mat-error *ngIf="registerForm.get('companyEmail')?.hasError('required')">
+              Email is required
+            </mat-error>
+            <mat-error *ngIf="registerForm.get('companyEmail')?.hasError('email')">
+              Invalid email format
+            </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Password</mat-label>
-        <input
-          matInput
-          [type]="hidePassword ? 'password' : 'text'"
-          placeholder="Password"
-          formControlName="password"
-        />
-        <button mat-icon-button type="button" (click)="togglePasswordVisibility()" matSuffix>
-          <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
-        </button>
-        <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
-          Password is required
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Password</mat-label>
+            <input
+              matInput
+              [type]="hidePassword ? 'password' : 'text'"
+              placeholder="Password"
+              formControlName="password"
+            />
+            <button mat-icon-button type="button" (click)="togglePasswordVisibility()" matSuffix>
+              <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </button>
+            <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
+              Password is required
+            </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Confirm Password</mat-label>
-        <input
-          matInput
-          [type]="hideConfirmPassword ? 'password' : 'text'"
-          placeholder="Confirm Password"
-          formControlName="confirmPassword"
-        />
-        <button mat-icon-button type="button" (click)="toggleConfirmPasswordVisibility()" matSuffix>
-          <mat-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
-        </button>
-        <mat-error *ngIf="registerForm.get('confirmPassword')?.hasError('passwordMismatch')">
-          Passwords do not match
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Company Name</mat-label>
+            <input matInput placeholder="Company Name" formControlName="companyName" />
+            <mat-error *ngIf="registerForm.get('companyName')?.hasError('required')">
+              Company Name is required
+            </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Company Name</mat-label>
-        <input matInput placeholder="Company Name" formControlName="companyName" />
-        <mat-error *ngIf="registerForm.get('companyName')?.hasError('required')">
-          Company Name is required
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Phone Number</mat-label>
+            <input matInput placeholder="Phone Number" formControlName="companyPhoneNumber" />
+            <mat-error *ngIf="registerForm.get('companyPhoneNumber')?.hasError('required')">
+              Phone Number is required
+            </mat-error>
+          </mat-form-field>
+        </div>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Phone Number</mat-label>
-        <input matInput placeholder="Phone Number" formControlName="companyPhoneNumber" />
-        <mat-error *ngIf="registerForm.get('companyPhoneNumber')?.hasError('required')">
-          Phone Number is required
-        </mat-error>
-      </mat-form-field>
+        <!-- Second Column of Inputs -->
+        <div class="form-column">
+          <mat-form-field appearance="fill">
+            <mat-label>Confirm Password</mat-label>
+            <input
+              matInput
+              [type]="hideConfirmPassword ? 'password' : 'text'"
+              placeholder="Confirm Password"
+              formControlName="confirmPassword"
+            />
+            <button mat-icon-button type="button" (click)="toggleConfirmPasswordVisibility()" matSuffix>
+              <mat-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </button>
+            <mat-error *ngIf="registerForm.get('confirmPassword')?.hasError('passwordMismatch')">
+              Passwords do not match
+            </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>City</mat-label>
-        <input matInput placeholder="City" formControlName="companyCity" />
-        <mat-error *ngIf="registerForm.get('companyCity')?.hasError('required')">
-          City is required
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>City</mat-label>
+            <input matInput placeholder="City" formControlName="companyCity" />
+            <mat-error *ngIf="registerForm.get('companyCity')?.hasError('required')">
+              City is required
+            </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Address</mat-label>
-        <input matInput placeholder="Company Address" formControlName="companyAddress" />
-        <mat-error *ngIf="registerForm.get('companyAddress')?.hasError('required')">
-          Address is required
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Address</mat-label>
+            <input matInput placeholder="Company Address" formControlName="companyAddress" />
+            <mat-error *ngIf="registerForm.get('companyAddress')?.hasError('required')">
+              Address is required
+            </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Description</mat-label>
-        <textarea matInput placeholder="Description" formControlName="description"></textarea>
-        <mat-error *ngIf="registerForm.get('description')?.hasError('required')">
-          Description is required
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Description</mat-label>
+            <textarea matInput placeholder="Description" formControlName="description"></textarea>
+            <mat-error *ngIf="registerForm.get('description')?.hasError('required')">
+              Description is required
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
     </div>
 
     <!-- Navigation Buttons -->
@@ -152,13 +168,7 @@
       <button mat-raised-button class="back-button" *ngIf="currentStep > 0" type="button" (click)="onBack()">
         BACK
       </button>
-      <button
-        mat-raised-button
-        class="next-button"
-        *ngIf="currentStep === 0"
-        type="button"
-        (click)="onNext()"
-      >
+      <button mat-raised-button class="next-button" *ngIf="currentStep === 0" type="button" (click)="onNext()">
         NEXT
       </button>
       <button mat-raised-button class="register-button" *ngIf="currentStep === 1" type="submit">
