--- a/src/app/authentication/register/pup-register/pup-register.component.css
+++ b/src/app/authentication/register/pup-register/pup-register.component.css
@@ -86,6 +86,11 @@
     margin-top: 1em;
     width: 100%; /* Make sure the button container spans the full width */
   }
+
+  #back-button2{
+    margin-top: 10px;
+
+  }
   
   .back-button  {
     width: 30%; /* Set width to less than 50% to allow space between the buttons */
