[ADD] - Add approved services overview, model and service

--- a/src/app/categories/admin-categories-suggestions-management/admin-categories-suggestions-management.component.html
+++ b/src/app/categories/admin-categories-suggestions-management/admin-categories-suggestions-management.component.html
@@ -1,6 +1,6 @@
 <mat-tab-group>
-  <mat-tab label="All categories">
-    <app-admin-all-categories-management></app-admin-all-categories-management>
+  <mat-tab label="Categories">
+    <app-admin-approved-categories-management></app-admin-approved-categories-management>
   </mat-tab>
   <mat-tab label="Suggestions">
     <app-admin-suggestions-management></app-admin-suggestions-management>
