--- a/src/app/categories/admin-suggestions-management/admin-suggestions-management.component.html
+++ b/src/app/categories/admin-suggestions-management/admin-suggestions-management.component.html
@@ -1,1 +1,41 @@
-<p>admin-suggestions-management works!</p>
+<div class="component">
+  <h2 class="title">Manage categories</h2>
+
+  <div class="table-container mat-elevation-z8">
+    <table *ngIf="dataSource" mat-table [dataSource]="dataSource" class="mat-table" matSort>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef class="name-header" mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let element" class="name-cell"> {{element.name}} </td>
+      </ng-container>
+
+      <!-- For Prodcut Column -->
+      <ng-container matColumnDef="forProduct">
+        <th mat-header-cell *matHeaderCellDef class="name-header" mat-sort-header> For Product </th>
+        <td mat-cell *matCellDef="let element" class="name-cell"> {{element.name}} </td>
+      </ng-container>
+
+      <!-- Description Column -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef class="actions-header"> Actions </th>
+        <td mat-cell *matCellDef="let element" class="actions-cell">
+          <button mat-icon-button (click)="edit(element)" [ngStyle]="{color: 'var(--primary-color)'}">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="approve(element)" [ngStyle]="{color: 'var(--green-color)'}">
+            <mat-icon>check</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" class="table-header"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+</div>
