--- a/src/app/categories/edit-category/edit-category.component.css
+++ b/src/app/categories/edit-category/edit-category.component.css
@@ -1,3 +1,8 @@
+h2 {
+  align-self: center;
+  color: var(--font-dark-blue) !important;
+}
+
 .form-container {
   display: flex;
   flex-direction: column;
