--- a/src/app/categories/edit-suggestion/edit-suggestion.component.css
+++ b/src/app/categories/edit-suggestion/edit-suggestion.component.css
@@ -1,16 +1,11 @@
 h2 {
-  align-self: center;
+  text-align: center;
   color: var(--font-dark-blue) !important;
 }
 
-.form-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem; /* Adds spacing between fields */
-}
-
-.mat-form-field {
-  width: 100%; /* Ensures fields take up full width */
+.component {
+  text-align: center;
+  color: var(--font-dark-blue) !important;
 }
 
 .actions-container {
@@ -34,3 +29,4 @@ h2 {
 .cancel-button {
   background-color: var(--primary-color);
 }
+
