[FIX] - Fix spelling

--- a/src/app/categories/admin-suggestions-management/admin-suggestions-management.component.html
+++ b/src/app/categories/admin-suggestions-management/admin-suggestions-management.component.html
@@ -1,5 +1,5 @@
 <div class="component">
-  <h2 class="title">Manage categories</h2>
+  <h2 class="title">Manage category suggestions</h2>
 
   <div class="table-container mat-elevation-z8">
     <table *ngIf="dataSource" mat-table [dataSource]="dataSource" class="mat-table" matSort>
