--- a/src/colors.css
+++ b/src/colors.css
@@ -1,12 +1,13 @@
 :root {
     --primary-color: #118AB2; /* Replace with your primary color */
     --secondary-color: #0D5B75;
-    --light-beige: #fffdf5; 
-    --beige: #FFF1D0; 
+    --light-beige: #fffdf5;
+    --beige: #FFF1D0;
     --light-blue: #E5F9FF;
     --font-dark-blue: #073B4C;
     --yellow-accent: #FFD166;
     --error-color: #B21114;
     --error-color-lighter: #FF7092;
     --green-color: #7E9B08;
+    --disabled-color: #B0B0B0;
   }
